force-app/main/default/src/objects/PJN_AE_Results__c/PJN_AE_Results__c.object-meta.xml
<CustomObject>
    <label>AE Test Result</label>
    <nameField>
        <displayFormat>AE-TR-{00000000}</displayFormat>
        <label>AE Results Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AE Test Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>