force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Comments__c.field-meta.xml
<CustomField>
    <fullName>PJN_Comments__c</fullName>
    <description>E2B (R2): NA

E2B (R3): F.r.6 Comments
User Guidance: This data element captures any relevant comments made by the reporter
about the test result.
Conformance: Optional
Data Type: 2000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures any relevant comments made by the reporter
about the test result.</inlineHelpText>
    <label>Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>