force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_MeDRA_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_MeDRA_Code__c</fullName>
    <description>E2B (R2): NA
E2B (R3): F.r.2.2b Test Name (MedDRA code)
User Guidance: This data element captures the MedDRA LLT code for the test name.
Conformance: Optional, but required when F.r.1 is populated and F.r.2.1 is not
populated.
Data Type: 8N
OID: 2.16.840.1.113883.6.163
Value Allowed: Numeric</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the MedDRA LLT code for the test name.</inlineHelpText>
    <label>MeDRA Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>