force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_MeDRA_Version_for_Test_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_MeDRA_Version_for_Test_Name__c</fullName>
    <description>E2B (R2): NA
E2B (R3): F.r.2.2a MedDRA Version for Test Name
User Guidance: This data element provides the MedDRA version for F.r.2.2b.
Conformance: Optional, but required when F.r.2.2b is populated.
Data Type: 4AN
OID: None
Value Allowed: Numeric and ‘. ‘(dot)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element provides the MedDRA version</inlineHelpText>
    <label>MeDRA Version for Test Name</label>
    <length>4</length>
    <type>Text</type>
</CustomField>