force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_More_Information_Available__c.field-meta.xml
<CustomField>
    <fullName>PJN_More_Information_Available__c</fullName>
    <description>E2B (R2): B.3.1.3, moreinformation (1N)

E2B (R3): F.r.7	More Information Available
User Guidance: This data element indicates if more information is held by the sender
about the test and test result. For example, ‘true’ means that more
documentation is available upon request e.g. ECG strips, chest X-ray.
‘False’ means that no more documentation is available from the sender.
If this data element is set to ‘true’, then C.1.6.1 should be set to ‘true’.
Conformance: Optional
Data Type: Boolean
OID: None
Value Allowed: false true</description>
    <inlineHelpText>User Guidance This data element indicates if more information is held by the sender
about the test and test result. For example, ‘true’ means that more
documentation is available upon request e.g. ECG strips, chest X-ray.</inlineHelpText>
    <label>More Information Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PJN_AE_Yes_No</valueSetName>
    </valueSet>
</CustomField>