force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Normal_High_Range__c.field-meta.xml
<CustomField>
    <fullName>PJN_Normal_High_Range__c</fullName>
    <description>E2B (R2): B.3.1.2, hightestrange (50AN)

E2B (R3): F.r.5	Normal High Value
User Guidance: This data element captures the ‘highest’ value in the normal range for the
test. This value is usually published by the laboratory providing the test
results. The same units as used in F.r.3.3 are implied.
Conformance: Optional
Data Type: 50AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the ‘highest’ value in the normal range for the
test. This value is usually published by the laboratory providing the test
results. The same units as used in Test Results are implied.</inlineHelpText>
    <label>Normal High Range</label>
    <length>50</length>
    <type>Text</type>
</CustomField>