force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Result__c.field-meta.xml
<CustomField>
    <fullName>PJN_Result__c</fullName>
    <description>E2B (R2): B.3.1d, testresult (50AN)

E2B (R3): F.r.3.4 Result Unstructured Data (free text)
User Guidance: This data element is used when ‘results’ and ‘units’ cannot be split, often
because a UCUM code is not available for the test unit. For example, for
the test ‘protein excretion’, the result could be recorded here as ‘125mg /
24 hours’.
Conformance: Optional, but required if F.r.2 is populated, and F.r.3 is not populated.
Data Type: 2000AN
OID: None
Value Allowed: Free text</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element is used when ‘results’ and ‘units’ cannot be split, often
because a UCUM code is not available for the test unit. For example, for
the test ‘protein excretion’, the result could be recorded here as ‘125mg /
24 hours’.</inlineHelpText>
    <label>Result (Free Text)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>