force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Test_Date__c</fullName>
    <description>E2B (R2): 3.1a, testdateformat (3N) and 3.1b, testdate (8N) will need to map in the following format CCYYMMDD (code 102).

E2B (R3): F.r.1 Test Date
User Guidance: This data element captures the date of the test or procedure. Imprecise
dates can be used.
Conformance: Optional, but required if F.r.2 is populated.
Data Type: Date / Time
OID: None
Value Allowed:  See Appendix II for further information.
nullFlavor = UNK</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the date of the test or procedure. Imprecise
dates can be used.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>