force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Test_Result_Code__c.field-meta.xml
<CustomField>
    <fullName>PJN_Test_Result_Code__c</fullName>
    <description>E2B (R2): NA
E2B (R3): F.r.3.1 Test Result (code)
User Guidance: This data element allows a descriptive code to indicate the test result.
Conformance: Optional, but required if F.r.2 is populated, and F.r.3.2 and F.r.3.4 is not
populated.
Data Type: 1N
OID: 2.16.840.1.113883.3.989.2.1.1.12
Value Allowed:
 1=Positive
2=Negative
3=Borderline
4=Inconclusive</description>
    <inlineHelpText>User Guidance: This data element allows a descriptive code to indicate the test result.</inlineHelpText>
    <label>Test Result Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>