force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Test_Result_Value__c.field-meta.xml
<CustomField>
    <fullName>PJN_Test_Result_Value__c</fullName>
    <description>E2B (R2): NA
E2B (R3): F.r.3.2 Test Result (value / qualifier)
User Guidance: This data element captures the value (amount) for the test result. A
qualifier symbol can be added to the value when appropriate. The
supported qualifiers are ‘greater than’, ‘less than’, ‘greater than or equal
to’ and ‘less than or equal to’.
Conformance: Optional, but required if F.r.2 is populated, and F.r.3.1 and F.r.3.4 is not
populated.
Data Type: 50N
OID: None
Value Allowed: Numeric
nullFlavor: NINF, PINF</description>
    <inlineHelpText>User Guidance: This data element captures the value (amount) for the test result.</inlineHelpText>
    <label>Test Result Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>