force-app/main/default/src/objects/PJN_AE_Results__c/fields/PJN_Unit__c.field-meta.xml
<CustomField>
    <fullName>PJN_Unit__c</fullName>
    <description>E2B (R2): B.3.1e, testunit (35AN)

E2B (R3): F.r.3.3 Test Result (unit)
User Guidance: This data element captures the unit for the test value. When a UCUM code
is not suitable, or results (F.r.3.2) and units (F.r.3.3) cannot be split,
F.r.3.4 should be used.
Conformance: Optional, but required if F.r.3.2 is populated.
Data Type: 50AN
OID: 2.16.840.1.113883.6.8
Value Allowed: UCUM</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User Guidance: This data element captures the unit for the test value. When a UCUM code
is not suitable, or results and units cannot be split,
Results (free text) should be used.</inlineHelpText>
    <label>Unit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>