force-app/main/default/src/objects/PJN_AE_Results__c/recordTypes/PJN_AE_Test_Result.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Test_Result</fullName>
    <active>true</active>
    <label>AE Test Result</label>
</RecordType>