force-app/main/default/src/objects/PJN_AE_Results__c/recordTypes/PJN_AE_Test_Result_Closed.recordType-meta.xml
<RecordType>
    <fullName>PJN_AE_Test_Result_Closed</fullName>
    <active>true</active>
    <label>AE Test Result - Closed</label>
</RecordType>